Fix spacing calculations

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -204,8 +204,8 @@ pre {
 
     @include media-query($on-laptop) {
         max-width: calc(800px - calc(var(--spacing-unit)));
-        padding-right: calc(var(--spacing-unit / 2));
-        padding-left: calc(var(--spacing-unit / 2));
+        padding-right: calc(var(--spacing-unit) / 2);
+        padding-left: calc(var(--spacing-unit) / 2);
     }
 }
 
